parser/TinyPyParser.py
# Generated from /Users/apple/Development/tiny-py-interpreter/parser/TinyPy.g4 by ANTLR 4.5.1
# encoding: utf-8
from io import StringIO

from antlr4 import *




class TinyPyParser ( Parser ):

    grammarFileName = "TinyPy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'='", "','", "'|'", "'^'", "'&'", 
                     "'<<'", "'>>'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'~'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'pass'", "'None'", "'True'", "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "NAME", "STRING_LITERAL", 
                      "DECIMAL_INTEGER", "HEX_INTEGER", "PASS", "NONE", 
                      "TRUE", "FALSE", "NEWLINE", "SKIP", "INDENT", "DEDENT" ]

    RULE_file_input = 0
    RULE_stmt = 1
    RULE_simple_stmt = 2
    RULE_small_stmt = 3
    RULE_expr_stmt = 4
    RULE_testlist_expr = 5
    RULE_expr = 6
    RULE_xor_expr = 7
    RULE_and_expr = 8
    RULE_shift_expr = 9
    RULE_arith_expr = 10
    RULE_term = 11
    RULE_factor = 12
    RULE_atom = 13
    RULE_number = 14
    RULE_integer = 15
    RULE_string = 16
    RULE_pass_stmt = 17

    ruleNames =  [ "file_input", "stmt", "simple_stmt", "small_stmt", "expr_stmt", 
                   "testlist_expr", "expr", "xor_expr", "and_expr", "shift_expr", 
                   "arith_expr", "term", "factor", "atom", "number", "integer", 
                   "string", "pass_stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    NAME=15
    STRING_LITERAL=16
    DECIMAL_INTEGER=17
    HEX_INTEGER=18
    PASS=19
    NONE=20
    TRUE=21
    FALSE=22
    NEWLINE=23
    SKIP=24
    INDENT=25
    DEDENT=26

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class File_inputContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TinyPyParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(TinyPyParser.NEWLINE)
            else:
                return self.getToken(TinyPyParser.NEWLINE, i)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.StmtContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.StmtContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_file_input

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFile_input" ):
                listener.enterFile_input(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFile_input" ):
                listener.exitFile_input(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFile_input" ):
                return visitor.visitFile_input(self)
            else:
                return visitor.visitChildren(self)




    def file_input(self):

        localctx = TinyPyParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_file_input)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TinyPyParser.T__8) | (1 << TinyPyParser.T__9) | (1 << TinyPyParser.T__13) | (1 << TinyPyParser.NAME) | (1 << TinyPyParser.STRING_LITERAL) | (1 << TinyPyParser.DECIMAL_INTEGER) | (1 << TinyPyParser.HEX_INTEGER) | (1 << TinyPyParser.PASS) | (1 << TinyPyParser.NONE) | (1 << TinyPyParser.TRUE) | (1 << TinyPyParser.FALSE) | (1 << TinyPyParser.NEWLINE))) != 0):
                self.state = 38
                token = self._input.LA(1)
                if token in [TinyPyParser.NEWLINE]:
                    self.state = 36
                    self.match(TinyPyParser.NEWLINE)

                elif token in [TinyPyParser.T__8, TinyPyParser.T__9, TinyPyParser.T__13, TinyPyParser.NAME, TinyPyParser.STRING_LITERAL, TinyPyParser.DECIMAL_INTEGER, TinyPyParser.HEX_INTEGER, TinyPyParser.PASS, TinyPyParser.NONE, TinyPyParser.TRUE, TinyPyParser.FALSE]:
                    self.state = 37
                    self.stmt()

                else:
                    raise NoViableAltException(self)

                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.match(TinyPyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(TinyPyParser.Simple_stmtContext,0)


        def getRuleIndex(self):
            return TinyPyParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = TinyPyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.simple_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Simple_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def small_stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.Small_stmtContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.Small_stmtContext,i)


        def NEWLINE(self):
            return self.getToken(TinyPyParser.NEWLINE, 0)

        def getRuleIndex(self):
            return TinyPyParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = TinyPyParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.small_stmt()
            self.state = 52
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 48
                    self.match(TinyPyParser.T__0)
                    self.state = 49
                    self.small_stmt() 
                self.state = 54
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 56
            _la = self._input.LA(1)
            if _la==TinyPyParser.T__0:
                self.state = 55
                self.match(TinyPyParser.T__0)


            self.state = 58
            self.match(TinyPyParser.NEWLINE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Small_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr_stmt(self):
            return self.getTypedRuleContext(TinyPyParser.Expr_stmtContext,0)


        def pass_stmt(self):
            return self.getTypedRuleContext(TinyPyParser.Pass_stmtContext,0)


        def getRuleIndex(self):
            return TinyPyParser.RULE_small_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSmall_stmt" ):
                listener.enterSmall_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSmall_stmt" ):
                listener.exitSmall_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSmall_stmt" ):
                return visitor.visitSmall_stmt(self)
            else:
                return visitor.visitChildren(self)




    def small_stmt(self):

        localctx = TinyPyParser.Small_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_small_stmt)
        try:
            self.state = 62
            token = self._input.LA(1)
            if token in [TinyPyParser.T__8, TinyPyParser.T__9, TinyPyParser.T__13, TinyPyParser.NAME, TinyPyParser.STRING_LITERAL, TinyPyParser.DECIMAL_INTEGER, TinyPyParser.HEX_INTEGER, TinyPyParser.NONE, TinyPyParser.TRUE, TinyPyParser.FALSE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.expr_stmt()

            elif token in [TinyPyParser.PASS]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.pass_stmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expr_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.Testlist_exprContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.Testlist_exprContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = TinyPyParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.testlist_expr()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TinyPyParser.T__1:
                self.state = 65
                self.match(TinyPyParser.T__1)

                self.state = 66
                self.testlist_expr()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Testlist_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.ExprContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.ExprContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_testlist_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTestlist_expr" ):
                listener.enterTestlist_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTestlist_expr" ):
                listener.exitTestlist_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTestlist_expr" ):
                return visitor.visitTestlist_expr(self)
            else:
                return visitor.visitChildren(self)




    def testlist_expr(self):

        localctx = TinyPyParser.Testlist_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_testlist_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.expr()
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 73
                    self.match(TinyPyParser.T__2)

                    self.state = 74
                    self.expr() 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 81
            _la = self._input.LA(1)
            if _la==TinyPyParser.T__2:
                self.state = 80
                self.match(TinyPyParser.T__2)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def xor_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.Xor_exprContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.Xor_exprContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = TinyPyParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.xor_expr()
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TinyPyParser.T__3:
                self.state = 84
                self.match(TinyPyParser.T__3)
                self.state = 85
                self.xor_expr()
                self.state = 90
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Xor_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def and_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.And_exprContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.And_exprContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_xor_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterXor_expr" ):
                listener.enterXor_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitXor_expr" ):
                listener.exitXor_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitXor_expr" ):
                return visitor.visitXor_expr(self)
            else:
                return visitor.visitChildren(self)




    def xor_expr(self):

        localctx = TinyPyParser.Xor_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_xor_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.and_expr()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TinyPyParser.T__4:
                self.state = 92
                self.match(TinyPyParser.T__4)
                self.state = 93
                self.and_expr()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class And_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shift_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.Shift_exprContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.Shift_exprContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_and_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd_expr" ):
                listener.enterAnd_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd_expr" ):
                listener.exitAnd_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd_expr" ):
                return visitor.visitAnd_expr(self)
            else:
                return visitor.visitChildren(self)




    def and_expr(self):

        localctx = TinyPyParser.And_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_and_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.shift_expr()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TinyPyParser.T__5:
                self.state = 100
                self.match(TinyPyParser.T__5)
                self.state = 101
                self.shift_expr()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Shift_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.Arith_exprContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.Arith_exprContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_shift_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShift_expr" ):
                listener.enterShift_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShift_expr" ):
                listener.exitShift_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShift_expr" ):
                return visitor.visitShift_expr(self)
            else:
                return visitor.visitChildren(self)




    def shift_expr(self):

        localctx = TinyPyParser.Shift_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_shift_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.arith_expr()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TinyPyParser.T__6 or _la==TinyPyParser.T__7:
                self.state = 112
                token = self._input.LA(1)
                if token in [TinyPyParser.T__6]:
                    self.state = 108
                    self.match(TinyPyParser.T__6)
                    self.state = 109
                    self.arith_expr()

                elif token in [TinyPyParser.T__7]:
                    self.state = 110
                    self.match(TinyPyParser.T__7)
                    self.state = 111
                    self.arith_expr()

                else:
                    raise NoViableAltException(self)

                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arith_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.TermContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.TermContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_arith_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith_expr" ):
                listener.enterArith_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith_expr" ):
                listener.exitArith_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArith_expr" ):
                return visitor.visitArith_expr(self)
            else:
                return visitor.visitChildren(self)




    def arith_expr(self):

        localctx = TinyPyParser.Arith_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arith_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.term()
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TinyPyParser.T__8 or _la==TinyPyParser.T__9:
                self.state = 122
                token = self._input.LA(1)
                if token in [TinyPyParser.T__8]:
                    self.state = 118
                    self.match(TinyPyParser.T__8)
                    self.state = 119
                    self.term()

                elif token in [TinyPyParser.T__9]:
                    self.state = 120
                    self.match(TinyPyParser.T__9)
                    self.state = 121
                    self.term()

                else:
                    raise NoViableAltException(self)

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.FactorContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.FactorContext,i)


        def getRuleIndex(self):
            return TinyPyParser.RULE_term

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm" ):
                listener.enterTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm" ):
                listener.exitTerm(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = TinyPyParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.factor()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TinyPyParser.T__10) | (1 << TinyPyParser.T__11) | (1 << TinyPyParser.T__12))) != 0):
                self.state = 134
                token = self._input.LA(1)
                if token in [TinyPyParser.T__10]:
                    self.state = 128
                    self.match(TinyPyParser.T__10)
                    self.state = 129
                    self.factor()

                elif token in [TinyPyParser.T__11]:
                    self.state = 130
                    self.match(TinyPyParser.T__11)
                    self.state = 131
                    self.factor()

                elif token in [TinyPyParser.T__12]:
                    self.state = 132
                    self.match(TinyPyParser.T__12)
                    self.state = 133
                    self.factor()

                else:
                    raise NoViableAltException(self)

                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(TinyPyParser.FactorContext,0)


        def atom(self):
            return self.getTypedRuleContext(TinyPyParser.AtomContext,0)


        def getRuleIndex(self):
            return TinyPyParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = TinyPyParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_factor)
        try:
            self.state = 146
            token = self._input.LA(1)
            if token in [TinyPyParser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(TinyPyParser.T__8)
                self.state = 140
                self.factor()

            elif token in [TinyPyParser.T__9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(TinyPyParser.T__9)
                self.state = 142
                self.factor()

            elif token in [TinyPyParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(TinyPyParser.T__13)
                self.state = 144
                self.factor()

            elif token in [TinyPyParser.NAME, TinyPyParser.STRING_LITERAL, TinyPyParser.DECIMAL_INTEGER, TinyPyParser.HEX_INTEGER, TinyPyParser.NONE, TinyPyParser.TRUE, TinyPyParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 145
                self.atom()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(TinyPyParser.NAME, 0)

        def number(self):
            return self.getTypedRuleContext(TinyPyParser.NumberContext,0)


        def string(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TinyPyParser.StringContext)
            else:
                return self.getTypedRuleContext(TinyPyParser.StringContext,i)


        def NONE(self):
            return self.getToken(TinyPyParser.NONE, 0)

        def TRUE(self):
            return self.getToken(TinyPyParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(TinyPyParser.FALSE, 0)

        def getRuleIndex(self):
            return TinyPyParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):
